--- a/index.html
+++ b/index.html
@@ -6,13 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-<<<<<<< HEAD
-    hijjmdddd  
-    <h3>salam</h3>  
-=======
     hijjmddddd
     <h1>مستر</h1>
-    <h2>azi</h2>
->>>>>>> azi
+    <h2>azii</h2>
 </body>
 </html>
