--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <h3>slal kskiiiieieieei</h3>
     <h3>this is </h3>
     <h4>kkkkkkk</h4>
-    <h2>salam</h2>
+    <h2>sala</h2>
 </body>
 </html>
